--- a/src/July2024.css
+++ b/src/July2024.css
@@ -14,7 +14,7 @@
   }
   
   .headerPhotoJuly{
-      width:40%;
+      width:60%;
       height:auto;
       /* border:#E0DBD1 solid 5px; */
       border: solid black 2px;
@@ -455,9 +455,63 @@ ul li {
   opacity: 1;   
   }
 }
+
+/*@media queries*/
+@media screen and (min-width:2000px) {
     
-        /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-    @media screen and (min-width:402px) and (max-width:900px){
+  /*To ensure on screensabove 2000 width that relevant components of 
+  the site are displayed with the best dimensions for the larger devices*/
+ .headerPhotoJuly{
+   width:15%;
+   height:auto;
+   border:#E0DBD1 solid 5px;
+   border-radius: 25%;
+   margin:auto;
+   pointer-events: none;
+   -webkit-border-radius: 25%;
+   -moz-border-radius: 25%;
+   -ms-border-radius: 25%;
+   -o-border-radius: 25%;
+  
+}
+
+.slideshowentryJuly {
+display: block;
+background-color: #C291A4;
+margin-left: auto;
+margin-right: auto;
+pointer-events:none;
+width:10%;
+height:auto;
+border-radius:100%;
+margin-top:3%;
+margin-bottom:5%;
+-webkit-border-radius:100%;
+-moz-border-radius:100%;
+-ms-border-radius:100%;
+-o-border-radius:100%;
+}      
+}
+
+/*To ensure on ipad screens and smaller that header photo will enlarge*/
+@media screen and (max-width:901px){
+  .headerPhotoJuly{
+   width:70%;
+   height:auto;
+   border:#E0DBD1 solid 5px;
+   border-radius: 25%;
+   margin:auto;
+   /* pointer-events: none; */
+   -webkit-border-radius: 25%;
+   -moz-border-radius: 25%;
+   -ms-border-radius: 25%;
+   -o-border-radius: 25%;
+  
+}
+  }
+
+     /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+    @media screen and (min-width:480px) and (max-width:900px){
     .blogPhotoDivJuly{
       display:flex;
       flex-direction: column;
@@ -467,79 +521,7 @@ ul li {
       margin-top:2%;
     }
     }
-
-     /*To ensure on ipad screens and smaller that header photo will enlarge*/
-     @media screen and (max-width:901px){
-     .headerPhotoJuly{
-      width:40%;
-      height:auto;
-      border:#E0DBD1 solid 5px;
-      border-radius: 25%;
-      margin:auto;
-      /* pointer-events: none; */
-      -webkit-border-radius: 25%;
-      -moz-border-radius: 25%;
-      -ms-border-radius: 25%;
-      -o-border-radius: 25%;
-     
-}
-     }
     
-    @media screen and (max-width:450px) {
-    
-     /*To ensure on mobile screens below 450px width (this includes one plus phones) that relevant components of 
-     the site are displayed with the best dimensions for the smaller devices*/
-    
-    
-    .July2024header {
-    display:block;
-    width: 100vw;
-    height:auto;
-    position:absolute; 
-    } 
-
-    .headerPhotoJuly{
-      width:100%;
-      height:auto;
-      border:#E0DBD1 solid 5px;
-      border-radius: 25%;
-      margin:auto;
-      pointer-events: none;
-      -webkit-border-radius: 25%;
-      -moz-border-radius: 25%;
-      -ms-border-radius: 25%;
-      -o-border-radius: 25%;
-     
-}
-    
-    /*To ensure on mobile screens below 450px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-    .blogPhotoDivJuly{
-    display:flex;
-    flex-direction: column;
-    background-color:  #C291A4;
-    padding-bottom: 15%;
-    padding-top: 5%;
-    margin-top:2%;
-    }
-
-    .slideshowentryJuly {
-      display: block;
-      background-color: #C291A4;
-      margin-left: auto;
-      margin-right: auto;
-      pointer-events:none;
-      width:60%;
-      height:auto;
-      border-radius:100%;
-      margin-top:3%;
-      margin-bottom:5%;
-      -webkit-border-radius:100%;
-      -moz-border-radius:100%;
-      -ms-border-radius:100%;
-      -o-border-radius:100%;
-    }      
-    }
-
     @media screen and (max-width:601px) {
       body #buttonJuly{
         display:block;
@@ -564,41 +546,54 @@ ul li {
       }  
     }
 
-    @media screen and (min-width:2000px) {
-    
-      /*To ensure on screensabove 2000 width that relevant components of 
-      the site are displayed with the best dimensions for the larger devices*/
- 
-     .headerPhotoJuly{
-       width:15%;
-       height:auto;
-       border:#E0DBD1 solid 5px;
-       border-radius: 25%;
-       margin:auto;
-       pointer-events: none;
-       -webkit-border-radius: 25%;
-       -moz-border-radius: 25%;
-       -ms-border-radius: 25%;
-       -o-border-radius: 25%;
-      
- }
+    /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+    the site are displayed with the best dimensions for the smaller devices*/
+  @media screen and (max-width:480px) {
+   .July2024header {
+   display:block;
+   width: 100vw;
+   height:auto;
+   position:absolute; 
+   } 
 
- .slideshowentryJuly {
-  display: block;
-  background-color: #C291A4;
-  margin-left: auto;
-  margin-right: auto;
-  pointer-events:none;
-  width:10%;
-  height:auto;
-  border-radius:100%;
-  margin-top:3%;
-  margin-bottom:5%;
-  -webkit-border-radius:100%;
-  -moz-border-radius:100%;
-  -ms-border-radius:100%;
-  -o-border-radius:100%;
-}      
-}
+   .headerPhotoJuly{
+     width:100%;
+     height:auto;
+     border:#E0DBD1 solid 5px;
+     margin:auto;
+     border-radius: 25%;      
+     -webkit-border-radius: 25%;
+     -moz-border-radius: 25%;
+     -ms-border-radius: 25%;
+     -o-border-radius: 25%;
+    }
+   
+   .blogPhotoDivJuly{
+   display:flex;
+   flex-direction: column;
+   background-color:  #C291A4;
+   padding-bottom: 15%;
+   padding-top: 5%;
+   margin-top:2%;
+   }
+
+   .slideshowentryJuly {
+     display: block;
+     background-color: #C291A4;
+     margin-left: auto;
+     margin-right: auto;
+     pointer-events:none;
+     width:60%;
+     height:auto;
+     border-radius:100%;
+     margin-top:3%;
+     margin-bottom:5%;
+     -webkit-border-radius:100%;
+     -moz-border-radius:100%;
+     -ms-border-radius:100%;
+     -o-border-radius:100%;
+   }      
+   }
+
 
    
