--- a/src/September2024.css
+++ b/src/September2024.css
@@ -117,10 +117,10 @@
 .slideshowentrySeptember {
   display: column;
   justify-content: center;
-  margin-left: 40%;
-  margin-right: 40%;
+  margin-left: 20%;
+  margin-right: 20%;
   pointer-events:none;
-  width:20%;
+  width:50%;
   height:auto;
   border:solid #757c88 3px;
   border-radius:30%;
@@ -181,6 +181,24 @@ font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif'
   text-decoration: underline;
 }
 
+#swaledaleSheep1{
+  transform: translate(-150px,-300px);
+  -webkit-transform: translate(-150px,-300px);
+  -moz-transform: translate(-150px,-300px);
+  -ms-transform: translate(-150px,-300px);
+  -o-transform: translate(-150px,-300px);
+  overflow: visible;
+}
+   
+   #swaledaleSheep2{
+     transform: translate(-600px,0px);
+     -webkit-transform: translate(-600px,0px);
+     -moz-transform: translate(-600px,0px);
+     -ms-transform: translate(-600px,0px);
+     -o-transform: translate(-600px,0px);
+     overflow: visible;
+}
+
 #sheepAdultLamb1{
   overflow-x: visible;
   overflow-y: visible;
@@ -192,6 +210,15 @@ font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif'
 }
 
 /*CSS for Harry's PhD congratulations firework display */
+
+.pyro{
+  transform: scale(90%) translate(0px,150px);
+  -webkit-transform: scale(90%) translate(0px,150px);
+  -moz-transform: scale(90%) translate(0px,150px);
+  -ms-transform: scale(90%) translate(0px,150px);
+  -o-transform: scale(90%) translate(0px,150px);
+}
+
 .CongratulationsPhD  {
 background-color: black;
 text-Align:center;
@@ -432,7 +459,7 @@ overflow: visible;
   }
 
    /*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
-  @media screen and (min-width:402px) and (max-width:900px){
+  @media screen and (min-width:481px) and (max-width:900px){
   .blogPhotoDivSeptember{
     display:flex;
     flex-direction: column;
@@ -445,10 +472,10 @@ overflow: visible;
   .slideshowentrySeptember {
     display: column;
     justify-content: center;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 10%;
+    margin-right: 10%;
     pointer-events:none;
-    width:50%;
+    width:80%;
     height:auto;
     border:solid #757c88 3px;
     border-radius:80%;
@@ -459,12 +486,36 @@ overflow: visible;
     -ms-border-radius:80%;
     -o-border-radius:80%;
   }
+
+  #swaledaleSheep1{
+    transform:scale(120%) translate(-350px,-300px);
+    -webkit-transform:scale(120%) translate(-350px,-300px);
+    -moz-transform:scale(120%) translate(-350px,-300px);
+    -ms-transform:scale(120%) translate(-350px,-300px);
+    -o-transform:scale(120%) translate(-350px,-300px);
+    overflow: visible;
+}
+   
+   #swaledaleSheep2{
+     transform: scale(100%) translate(-600px,-100px);
+     -webkit-transform: scale(100%) translate(-600px,-100px);
+     -moz-transform: scale(100%) translate(-600px,-100px);
+     -ms-transform: scale(100%) translate(-600px,-100px);
+     -o-transform: scale(100%) translate(-600px,-100px);
+     overflow: visible;
+} 
+
+.pyro{
+  transform: scale(85%) translate(0px,150px);
+  -webkit-transform: scale(85%) translate(0px,150px);
+  -moz-transform: scale(85%) translate(0px,150px);
+  -ms-transform: scale(85%) translate(0px,150px);
+  -o-transform: scale(85%) translate(0px,150px);
+}
   }
 
+ /*To ensure on screens less than 480px, display of all items is optimised and scaled for the smaller display.*/
   @media screen and (max-width:480px) {
-    /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
-     the site are displayed with the best dimensions for the smaller devices*/
-    
     .SeptemberHeader {
     display:block;
     text-align: center;
@@ -482,10 +533,10 @@ overflow: visible;
     .slideshowentrySeptember {
       display: column;
       justify-content: center;
-      margin-left: 15%;
-      margin-right: 15%;
+      margin-left: 5%;
+      margin-right: 5%;
       pointer-events:none;
-      width:70%;
+      width:90%;
       height:auto;
       border:solid #757c88 3px;
       border-radius:80%;
@@ -497,47 +548,24 @@ overflow: visible;
       -o-border-radius:80%;
     }
 
-    /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of the site are displayed with the best dimensions for the smaller devices*/
-        
-   #swaledaleSheep1{
-    transform:scale(80%) translate(-400px,0px);
-    -webkit-transform:scale(80%) translate(-400px,0px);
-    -moz-transform:scale(80%) translate(-400px,0px);
-    -ms-transform:scale(80%) translate(-400px,0px);
-    -o-transform:scale(80%) translate(-400px,0px);
+  #swaledaleSheep1{
+    transform:scale(120%) translate(-580px,-200px);
+    -webkit-transform:scale(120%) translate(-580px,-200px);
+    -moz-transform:scale(120%) translate(-580px,-200px);
+    -ms-transform:scale(120%) translate(-580px,-200px);
+    -o-transform:scale(120%) translate(-580px,-200px);
     overflow: visible;
 }
    
    #swaledaleSheep2{
-     transform: scale(80%) translate(-600px,0px);
-     -webkit-transform: scale(80%) translate(-600px,0px);
-     -moz-transform: scale(80%) translate(-600px,0px);
-     -ms-transform: scale(80%) translate(-600px,0px);
-     -o-transform: scale(80%) translate(-600px,0px);
+     transform: scale(100%) translate(-600px,-100px);
+     -webkit-transform: scale(100%) translate(-600px,-100px);
+     -moz-transform: scale(100%) translate(-600px,-100px);
+     -ms-transform: scale(100%) translate(-600px,-100px);
+     -o-transform: scale(100%) translate(-600px,-100px);
      overflow: visible;
-}
-
-  }
+} 
   
-  @media screen and (max-width:401px) {
-  /*To ensure on mobile screens below 401px width (this includes one plus phones) that relevant components of 
-   the site are displayed with the best dimensions for the smaller devices*/
-  
-  .SeptemberHeader {
-  display:block;
-  text-align: center;
-  font-size: 26px;
-  color:white;
-  font-weight: bold;    width: 100vw;
-  height:auto;
-  position:absolute; 
-  } 
-
-  .newsheaderSeptember{
-    margin-top:20%;
-  }
-  
-  /*To ensure on mobile screens below 401px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
   .blogPhotoDivSeptember{
   display:flex;
   flex-direction: column;
@@ -547,13 +575,13 @@ overflow: visible;
   margin-top:2%;
   }
 
-  .CowsAndSheep{
-     transform:scale(0.4)    ;
-     -webkit-transform:scale(0.4)    ;
-     -moz-transform:scale(0.4)    ;
-     -ms-transform:scale(0.4)    ;
-     -o-transform:scale(0.4)    ;
-}
+  /* .CowsAndSheep{
+     transform:scale(0.8)    ;
+     -webkit-transform:scale(0.8)    ;
+     -moz-transform:scale(0.8)    ;
+     -ms-transform:scale(0.8)    ;
+     -o-transform:scale(0.8)    ;
+} */
 
 .dateSeptember{
 font-size:1.0rem;
@@ -567,8 +595,14 @@ li{
 font-size:1.0rem;
 }
 
-  }
-
+.pyro{
+  transform: scale(70%) translate(0px,200px);
+  -webkit-transform: scale(70%) translate(0px,200px);
+  -moz-transform: scale(70%) translate(0px,200px);
+  -ms-transform: scale(70%) translate(0px,200px);
+  -o-transform: scale(70%) translate(0px,200px);
+}
+}
  
 
   
