--- a/src/October2024.css
+++ b/src/October2024.css
@@ -118,9 +118,9 @@
   margin-left: auto;
   margin-right: auto;
   pointer-events:none;
-  width:80%;
+  width:35%;
   height:auto;
-  /* border:solid 2px; */
+  border:solid #1f3613 3px;
   border-radius:100%;
   margin-top:3%;
   margin-bottom:5%;
@@ -128,7 +128,96 @@
   -moz-border-radius:100%;
   -ms-border-radius:100%;
   -o-border-radius:100%;
-}      
+} 
+
+.blogPhotoDivOctober{
+  display:flex;
+  flex-direction: row;
+  border:solid 2px #757c88;
+  background-color: #5b7248;
+  padding-bottom: 5%;
+  padding-top: 3%;
+  padding-left: 2%;
+  padding-right:2%;
+  margin-top:5vh;
+}
+
+.blogPhotoOctober img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:70%;
+  height:auto;
+  border:solid #1f3613 4px;
+  border-radius: 20%;
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  -o-border-radius: 20%;
+}
+
+.octoberfigcaption {
+  text-align: center;
+  font-family: bold;
+  color:black;
+  font-size: 1.0rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  overflow-wrap:normal;
+  padding-top:5%;
+}
+
+/*To ensure on ipad screens and larger mobiles that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
+@media screen and (min-width:481px) and (max-width:900px){
+  .blogPhotoDivOctober{
+    display:flex;
+    flex-direction: column;
+    background-color: #5b7248;
+    padding-bottom: 15%;
+    padding-top: 5%;
+    margin-top:2%;
+  }
+}
+
+  @media screen and (max-width:480px){
+  .blogPhotoDivOctober{
+    display: flex;
+    flex-direction: column;
+    background-color: #5b7248;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    margin-top: 2%;
+    }
+
+    .slideshowentryOctober {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      pointer-events:none;
+      width:65%;
+      height:auto;
+      border:solid #1f3613 3px;
+      border-radius:100%;
+      margin-top:3%;
+      margin-bottom:5%;
+      -webkit-border-radius:100%;
+      -moz-border-radius:100%;
+      -ms-border-radius:100%;
+      -o-border-radius:100%;
+    } 
+
+    .October2024header {
+      display:block;
+      text-align: center;
+      font-size: 1.75em;
+      font-weight: bold;
+      width: 100vw;
+      height:100vh;
+      position:absolute;
+      background-color: #cc8014;
+      overflow-x: hidden;
+        } 
+
+  }
 
 
       @media screen (max-width 401px){
