--- a/src/September2024.css
+++ b/src/September2024.css
@@ -1,4 +1,4 @@
-.SeptemberHeader{
+.SeptemberHeader2024{
   font-size: 38px;
   font-weight:bold;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -13,7 +13,7 @@
   position:absolute;
   height:50px;
   width:15%;
-  background-color: #D23736 ;
+  background-color: #eec170 ;
   border:grey 2px solid;
   text-align: center;
   font-size: large;
@@ -21,7 +21,7 @@
   color:black;
   top:10%;
   text-decoration: underline;
-  margin: 5% 25% 5% 75%;
+  margin: 5% 20% 5% 80%;
   border-radius:15%;
   -webkit-border-radius:15%;
   -moz-border-radius:15%;
@@ -34,7 +34,15 @@
     } 
 
 .LinkSeptember{
-  color:whitesmoke;
+  color:#585123;
+  font-weight: bold;
+  font-size: 1.0rem;
+}
+
+.SeptemberheaderDisplay{
+  background-color:"#98964D";
+  padding-bottom:15%;
+  border: solid #eec170 8px;
 }
 
 .SeptemberList{
@@ -90,7 +98,7 @@
     margin-bottom: 0vh;
     font-size:1.2rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight:bold;
+    /* font-weight:bold; */
   }
 
   .blogPhotoDivSeptember{
@@ -152,7 +160,7 @@ padding-bottom: 2%;
 padding-right: 10%;
 padding-left:10%;
 color:black;
-font-size:1.2rem;
+font-size:1.0rem;
 font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
 
@@ -166,18 +174,18 @@ padding-right:2%;
 color:black;
 display:flex;
 flex-direction:column;
-font-size:1.2rem;
+font-size:1.0rem;
 font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
 
 .titlesSeptember{
   color:black;
-  font-size:1.3rem;
+  font-size:1.2rem;
 }
 
 .headTitlesSeptember{
   color:black;
-  font-size:1.3rem; 
+  font-size:1.2rem; 
   text-decoration: underline;
 }
 
@@ -207,6 +215,10 @@ font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif'
 #sheepAdultLambS2{
   overflow-x: visible;
   overflow-y: visible;
+}
+
+.CowsAndSheep {
+  margin-bottom:15%;
 }
 
 /*CSS for Harry's PhD congratulations firework display */
