--- a/src/July2024.css
+++ b/src/July2024.css
@@ -200,7 +200,9 @@
   flex-direction: column;
   width: 50vw;
   height: auto;
-  margin: auto;
+  margin-bottom: 10%;
+  margin-left:auto;
+  margin-right:auto;
   position: relative;
   /* overflow: hidden; */
 }
@@ -517,6 +519,18 @@ margin-bottom:5%;
       padding-top: 5%;
       margin-top:2%;
     }
+
+    .main {
+      display:flex;
+      flex-direction: column;
+      width: 50vw;
+      height: auto;
+      margin-bottom: 30%;
+      margin-left:auto;
+      margin-right:auto;
+      position: relative;
+      /* overflow: hidden; */
+    }
     }
     
     @media screen and (max-width:601px) {
@@ -541,6 +555,8 @@ margin-bottom:5%;
         -ms-border-radius:15%;
         -o-border-radius:15%;
       }  
+
+    
     }
 
     /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
@@ -589,7 +605,19 @@ margin-bottom:5%;
      -moz-border-radius:100%;
      -ms-border-radius:100%;
      -o-border-radius:100%;
-   }      
+   } 
+   
+   .main {
+    display:flex;
+    flex-direction: column;
+    width: 50vw;
+    height: auto;
+    margin-bottom: 30%;
+    margin-left:auto;
+    margin-right:auto;
+    position: relative;
+    /* overflow: hidden; */
+  }
    }
 
 
