--- a/src/November2024.css
+++ b/src/November2024.css
@@ -273,7 +273,7 @@
         padding:20px 20px 20px 20px;
         margin-top:0%;
         margin-bottom: 3%;
-        font-size:1.0rem;
+        font-size:1.1rem;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-weight:bold;
         width:100%;
@@ -282,13 +282,15 @@
       .SlideshowHostPhotoNovember{
         display:flex;
         flex-direction: column;
-        background-color: #5b7248;
+        background-color: #e47127;
         padding-bottom: 5%;
         padding-top: 5%;
         margin-top:2%;
         justify-content:center;
         text-align:center;
+        border:solid 2px #757c88;
       }
+      
 
       .slideshowinstructionsNovember {
         margin-top:5%;
@@ -296,7 +298,7 @@
         font-size:1.1rem;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         display:inline-block;
-        color:white; 
+        color:black; 
       }
 
       
@@ -305,7 +307,7 @@
   margin-left: auto;
   margin-right: auto;
   pointer-events:none;
-  width:35%;
+  width:25%;
   height:auto;
   border:solid #1f3613 3px;
   border-radius:100%;
@@ -366,8 +368,111 @@
   -o-transform: scale(0.9)  ;
 } */
 }
+ 
+
+/*HWP copied elements*/  
   
+  li {
+  text-align: left;
+  }
+  
+  ul .listItemsAlign{
+    display:block;
+    align-items: center;
+  }
+  
+  .componentWalkDetailsNovember{
+    background-color: #773f3f	;
+    text-Align:center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right:2%;
+    color:white;
+    border:solid 2px #757c88;
+    display:flex;
+    flex-direction:column;
+    font-size:1.1rem;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+  }
+  
+  .titlesNovember{
+    color:white;
+    font-size:1.2rem;
+  }
+  
+  .headTitlesNovember{
+    color:white;
+    font-size:1.2rem; 
+    text-decoration: underline;
+  }
+  
+  @media screen and (min-width:481) and (max-width:902px) {  
+    /*To ensure on mobile screens below 902px width (this includes one plus phones) that relevant components of 
+    the site are displayed with the best dimensions for the smaller devices*/
+    .slideshowentryNovember {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      pointer-events: none;
+      width: 65%;
+      height: auto;
+      color: black;
+      border: solid #757c88 3px;
+      border-radius:100%;
+      margin-top:3%;
+      margin-bottom:5%;
+      -webkit-border-radius:100%;
+      -moz-border-radius:100%;
+      -ms-border-radius:100%;
+      -o-border-radius:100%;
+    } 
+  }
 
+  @media screen and (max-width:480px) {  
+    /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+    the site are displayed with the best dimensions for the smaller devices*/
+  
+  /*To ensure on mobile screens below 480px that photos are displayed in columnar format to ensure sizing and clarity of image optimal*/
 
+  .titlesNovember{
+    color:white;
+    font-size:1.0rem;
+  }
+  
+  .headTitlesNovember{
+    color:white;
+    font-size:1.0rem; 
+    text-decoration: underline;
+  }
+  
+  .componentWalkDetailsNovember{
+    background-color: #773f3f	;
+    text-Align:center;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-right:2%;
+    color:white;
+    border:solid 2px #757c88;
+    display:flex;
+    flex-direction:column;
+    font-size:1.0rem;
+    font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
+  }
 
-
+  .slideshowentryNovember {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events:none;
+    width:55%;
+    height:auto;
+    border:solid #1f3613 3px;
+    border-radius:100%;
+    margin-top:3%;
+    margin-bottom:5%;
+    -webkit-border-radius:100%;
+    -moz-border-radius:100%;
+    -ms-border-radius:100%;
+    -o-border-radius:100%;
+  } 
+   }
