--- a/src/June2024.css
+++ b/src/June2024.css
@@ -24,6 +24,11 @@
 .backbuttonLink{
     color:white
     } 
+
+    .LinkJune{
+  text-decoration: underline;
+  color: blue;
+    }
   
   .datenewsDivJune{
     background-color: #B0C4DE;
@@ -67,7 +72,7 @@
     padding:20px 20px 20px 20px;
     margin-top:1%;
     margin-bottom: 0vh;
-    font-size:1.0rem;
+    font-size:1.1rem;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight:bold;
   }
