--- a/src/December2024.css
+++ b/src/December2024.css
@@ -7,8 +7,8 @@
     font-weight: bold;
     width: 100vw;
     height:100vh;
-    position:absolute;
-    background-color: black;
+    position:relative;
+    background-color: #165B33;
     overflow-x: hidden;
       } 
 
@@ -17,7 +17,7 @@
         position:absolute;
         height:50px;
         width:15%;
-        background-color: #FFD437 ;
+        background-color: whitesmoke ;
         border:grey 2px solid;
         text-align: center;
         font-size: large;
@@ -33,15 +33,21 @@
         -o-border-radius:15%;
       } 
 
+      .mainDecember{
+        background-color:black;
+        padding-top:5%;
+        padding-bottom:20%
+      }
+
       .newsDecember{
         color:white;
-        border:solid 2px #757c88;
-        background-color:	#773f3f;
+        border:solid 2px whitesmoke;
+        background-color:	#BB252B;
         text-align: left;
         padding:20px 20px 20px 20px;
         margin-top:0%;
         margin-bottom: 10%;
-        font-size:1.0rem;
+        font-size:1.1rem;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-weight:bold;
         width:100%;
@@ -49,11 +55,11 @@
 
       .dateDecember{
         color:white;
-        border:solid 2px #757c88;
-        background-color:	#773f3f;
+        border:solid 2px whitesmoke;
+        background-color:		#BB252B;
         text-align: center;
         padding:10px 10px 10px 10px;
-        margin-top:0%;
+        margin-top:3%;
         margin-bottom:1%;
         font-size:1.2rem;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -63,8 +69,8 @@
       
       .newsheaderDecember{
         color:white;
-        border:solid 2px #757c88;
-        background-color:#773f3f;
+        border:solid 2px whitesmoke;
+        background-color: 	#BB252B;
         text-align: center;
         padding:10px 20px 10px 20px;
         margin-top:0.3%;
@@ -74,3 +80,36 @@
         font-weight:bold;
         width:100%;
       }
+
+
+
+      @media screen and (max-width:480px) {  
+        /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+        the site are displayed with the best dimensions for the smaller devices*/
+        .December2024header {
+          display:block;
+          text-align: center;
+          font-size: 1.75em;
+          font-weight: bold;
+          width: 100vw;
+          height:50vh;
+          position:relative;
+          background-color: #165B33;
+          overflow-x: hidden;
+            } 
+
+            .newsDecember{
+              color:white;
+              border:solid 2px whitesmoke;
+              background-color:	#BB252B;
+              text-align: left;
+              padding:20px 20px 20px 20px;
+              margin-top:0%;
+              margin-bottom: 10%;
+              font-size:1.0rem;
+              font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+              font-weight:bold;
+              width:100%;
+            }
+      
+    }
