--- a/src/December2024.css
+++ b/src/December2024.css
@@ -33,6 +33,12 @@
         -o-border-radius:15%;
       } 
 
+      .LinkDecember2024 {
+        color:#f7ca46;
+        font-size: 1.2rem;
+        text-decoration: underline;
+      }
+
       .mainDecember{
         background-color:black;
         padding-top:5%;
@@ -81,6 +87,51 @@
         width:100%;
       }
 
+      .dateNewsDecember{
+        font-weight: bold;
+        font-size: 1.2rem;
+        color:#f7ca46;
+      }
+
+      
+      .SlideshowHostPhotoDecember{
+        display:flex;
+        flex-direction: column;
+        border:solid 2px whitesmoke;
+        background-color:#BB252B;
+        padding-bottom: 2%;
+        padding-top: 2%;
+        margin-top:2%;
+        justify-content:center;
+        text-align:center;
+      }
+
+      .slideshowinstructionsDecember {
+        margin-top:1%;
+        margin-bottom:2%;
+        font-size:1.2rem;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        display:inline-block;
+        color:white; 
+      }
+
+      .slideshowentryDecember {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        pointer-events:none;
+        width:25%;
+        height:auto;
+        border:solid #1f3613 3px;
+        border-radius:100%;
+        margin-top:3%;
+        margin-bottom:5%;
+        -webkit-border-radius:100%;
+        -moz-border-radius:100%;
+        -ms-border-radius:100%;
+        -o-border-radius:100%;
+      } 
+
 
 
       @media screen and (max-width:480px) {  
@@ -103,7 +154,7 @@
               border:solid 2px whitesmoke;
               background-color:	#BB252B;
               text-align: left;
-              padding:20px 20px 20px 20px;
+              padding:20px 10% 20px 10%;
               margin-top:0%;
               margin-bottom: 10%;
               font-size:1.0rem;
@@ -111,5 +162,45 @@
               font-weight:bold;
               width:100%;
             }
+
+            .blogPhotoDivDecember{
+                display: flex;
+                flex-direction: column;
+                background-color: #5b7248;
+                padding-bottom: 5%;
+                padding-top: 5%;
+                margin-top: 2%;
+                }
+            
+                .slideshowentryDecember {
+                  display: block;
+                  margin-left: auto;
+                  margin-right: auto;
+                  pointer-events:none;
+                  width:65%;
+                  height:auto;
+                  border:solid #1f3613 3px;
+                  border-radius:100%;
+                  margin-top:3%;
+                  margin-bottom:5%;
+                  -webkit-border-radius:100%;
+                  -moz-border-radius:100%;
+                  -ms-border-radius:100%;
+                  -o-border-radius:100%;
+                } 
+
+                .slideshowinstructionsDecember {
+                  margin-top:1%;
+                  margin-bottom:2%;
+                  padding-right: 10%;
+                  padding-left:10%;
+                  font-size:1.1rem;
+                  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                  display:inline-block;
+                  color:white; 
+                }
+                        
+              }
+            
       
-    }
+    
