--- a/src/components/dropdown.css
+++ b/src/components/dropdown.css
@@ -9,11 +9,20 @@
     margin-bottom: 10%;
     padding-top: 2%;
     padding-bottom: 2%;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
+
+.spacing{
+    padding: 5px ;
+} 
 
 .monthLink{
     color:white;
     text-decoration: underline;
+    font-size: large;
 }
 
 @media screen and (max-width:480px){
