--- a/styles/January2025.css
+++ b/styles/January2025.css
@@ -22,8 +22,8 @@
   text-align: left;
   padding: 50px 20px 5px 20px;
   margin-top: 0%;
-  margin-bottom: 10%;
-  font-size: 1.1rem;
+  margin-bottom: 5%;
+  font-size: 1.2rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
   width: 100%;
@@ -67,4 +67,122 @@
   background-color: black;
   height: 100%;
   padding-bottom: 3%;
+}
+
+.slideshowinstructionsJanuary {
+  margin-top: 1%;
+  margin-bottom: 2%;
+  font-size: 1.2rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: block;
+  color: white;
+}
+
+.slideshowentryJanuary {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  pointer-events: none;
+  height: auto;
+  width: 25%;
+  border: solid #1f3613 3px;
+  border-radius: 100%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+}
+
+.SlideshowHostPhotoJanuary {
+  display: flex;
+  flex-direction: column;
+  border: solid 2px whitesmoke;
+  background-color: #a4a4aC;
+  padding-bottom: 2%;
+  padding-top: 2%;
+  justify-content: center;
+  text-align: center;
+}
+
+@media screen and (min-width: 481px) and (max-width: 900px) {
+  .slideshowentryJanuary {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    height: auto;
+    width: 40%;
+    border: solid #1f3613 3px;
+    border-radius: 100%;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+  }
+}
+@media screen and (max-width: 480px) {
+  /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+  the site are displayed with the best dimensions for the smaller devices*/
+  .January2024header {
+    display: block;
+    text-align: center;
+    font-size: 1.75em;
+    font-weight: bold;
+    width: 100vw;
+    height: 50vh;
+    position: relative;
+    background-color: #165B33;
+    overflow-x: hidden;
+  }
+  .newsJanuary {
+    color: white;
+    border: solid 2px whitesmoke;
+    background-color: #a4a4aC;
+    text-align: left;
+    padding: 20px 10% 20px 10%;
+    margin-top: 0%;
+    margin-bottom: 10%;
+    font-size: 1rem;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-weight: bold;
+    width: 100%;
+  }
+  .blogPhotoDivJanuary {
+    display: flex;
+    flex-direction: column;
+    background-color: #a4a4aC;
+    padding-bottom: 5%;
+    padding-top: 5%;
+    margin-top: 2%;
+  }
+  .slideshowentryJanuary {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+    width: 65%;
+    height: auto;
+    border: solid #1f3613 3px;
+    border-radius: 100%;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+  }
+  .slideshowinstructionsJanuary {
+    margin-top: 1%;
+    margin-bottom: 2%;
+    padding-right: 10%;
+    padding-left: 10%;
+    font-size: 1.1rem;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    display: block;
+    color: white;
+  }
 }/*# sourceMappingURL=January2025.css.map */
