--- a/src/February2025.css
+++ b/src/February2025.css
@@ -3,13 +3,14 @@
 }
 
 .bodyFeb2025 {
-  background-color:black;
+  background-color:#6B7A8F;
   margin:0;
   padding:0;
   height:100vh;
   }
 
 .February2025header {
+    color:white;
     display:block;
     text-align: center;
     justify-items: center;
@@ -18,7 +19,7 @@
     width: 100%;
     height:15vh;
     position:relative;
-    background-color:#f9c16c;
+    background-color:#7393B3;
     padding:4%;
 }
 
@@ -28,7 +29,7 @@
   height:fit-content;
   width:fit-content;
   padding:2%;
-  background-color: black ;
+  background-color: #786D68 ;
   border:grey 2px solid;
   text-align: center;
   font-size: large;
@@ -53,19 +54,18 @@
 }
 
 .snowScene {
-  background: linear-gradient(180deg, #E3E3E3 20% , #f4f4f4 30% , white 35% 100%); 
+  background: linear-gradient(180deg, #a6c0cd 20% , #dde6eb 30% , #f4f4f4 35% 100%); 
   display: block;
   position:absolute;
   width:100vw;
   height:100vh;
   top:0;
-  
-  }
+    }
 
   .groundSnow {
     position:absolute;
     background:linear-gradient(45deg, #736e68, #f4f4f4);
-    /* height: 30vh; */
+
   }
 
 .curtain1{
@@ -116,10 +116,159 @@
   -o-transform: scaleX(0);
 }
 
+.newsFebruary{
+  color:#786D68;
+  border:solid 2px whitesmoke;
+  background-color:	#C2B280;
+  text-align: left;
+  padding:50px 20px 5px 20px;
+  margin-top:0%;
+  margin-bottom: 5%;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight:bold;
+  width:100%;
+}
+
+.dateFebruary{
+  color:#786D68;
+  border:solid 2px whitesmoke;
+  background-color:		#C2B280;
+  text-align: center;
+  padding:10px 10px 10px 10px;
+  margin-top:3%;
+  margin-bottom:5%;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+  width:100%;
+}
+
+.newsheaderFebruary{
+  color:#786D68;
+  border:solid 2px whitesmoke;
+  background-color: 	#C2B280;
+  text-align: center;
+  padding:10px 20px 10px 20px;
+  margin-top:0.3%;
+  margin-bottom:2%;
+  font-size:1.2rem;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight:bold;
+  width:100%;
+}
+
+.dateNewsFebruary{
+  font-weight: bold;
+  font-size: 1.2rem;
+  color:#f7ca46;
+}
+
+@media screen and (min-width:480px) and (max-width:900px) { 
+  .snowScene {
+    background: linear-gradient(180deg, #a6c0cd 20% , #dde6eb 30% , #f4f4f4 35% 100%); 
+    display: block;
+    position:absolute;
+    width:100vw;
+    height:90vh;
+    top:0%;
+    bottom:0%;
+      } 
+} 
 
 
+@media screen and (max-width:480px) {  
+  /*To ensure on mobile screens below 480px width (this includes one plus phones) that relevant components of 
+  the site are displayed with the best dimensions for the smaller devices*/
+  .February2025header {
+    display:block;
+    text-align: center;
+    font-size: 1.75em;
+    font-weight: bold;
+    width: 100vw;
+    height:15vh;
+    position:relative;
+    background-color: #7393B3;
+    overflow-x: hidden;
+      } 
 
+      .dateFebruary{
+        color:#786D68;
+        border:solid 2px whitesmoke;
+        background-color:		#C2B280;
+        text-align: center;
+        padding:10px 10px 10px 10px;
+        margin-top:1%;
+        margin-bottom:1%;
+        font-size:1.2rem;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight: bold;
+        width:100%;
+      }
 
+      .newsFebruary{
+        color:white;
+        border:solid 2px whitesmoke;
+        background-color:	#C2B280;
+        text-align: left;
+        padding:20px 10% 20px 10%;
+        margin-top:0%;
+        margin-bottom: 0%;
+        font-size:1.0rem;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-weight:bold;
+        width:100%;
+      }
+
+      .blogPhotoDivFebruary{
+          display: flex;
+          flex-direction: column;
+          background-color: #C2B280;
+          padding-bottom: 5%;
+          padding-top: 5%;
+          margin-top: 2%;
+          }
+      
+          .slideshowentryFebruary {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            pointer-events:none;
+            width:65%;
+            height:auto;
+            border:solid #1f3613 3px;
+            border-radius:100%;
+            margin-top:3%;
+            margin-bottom:5%;
+            -webkit-border-radius:100%;
+            -moz-border-radius:100%;
+            -ms-border-radius:100%;
+            -o-border-radius:100%;
+          } 
+
+          .slideshowinstructionsFebruary {
+            margin-top:1%;
+            margin-bottom:2%;
+            padding-right: 10%;
+            padding-left:10%;
+            font-size:1.1rem;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            display: block;
+            color:white; 
+          }
+
+          .snowScene {
+            background: linear-gradient(180deg, #a6c0cd 20% , #dde6eb 30% , #f4f4f4 35% 100%); 
+            display: block;
+            position:absolute;
+            width:100vw;
+            height:90vh;
+            top:0;
+            bottom:0;
+              }
+                  
+        }
+      
 
 
 
